--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
@@ -22,8 +22,9 @@
 		flex: 0 0 100%;
 		justify-content: space-between;
 
-		i {
-			vertical-align: middle;
+		div {
+			display: flex;
+			align-items: center;
 		}
 
 		.share {
