--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -20,7 +20,7 @@
 		</div>
 	</div>
 
-	<div class="results-table-body scrolled"  (ansynInfiniteScroll)="loadResults()" *ngIf="overlays">
+	<div class="results-table-body scrolled" *ngIf="overlays">
 
 		<div class="results-table-body-row"
 			 *ngFor="let overlay of overlays"
