--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -42,7 +42,7 @@
 </div>
 
 	<!-- data input filter-->
-	<div class="box id="dataInputsPreSearch""
+	<div class="box" id="dataInputsPreSearch"
 		 [attr.tooltip-value]="statusBarConfig?.toolTips?.dataInputFilter | translate"
 		 tooltip-class="bottom">
 		<button ansynComboBoxTrigger
