change title to type

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -52,7 +52,7 @@
 				[isActive]="dataInputFilterExpand"
 				[withArrow]="false"
 				class="button">
-			<span class="title">{{'Data Inputs' | translate}} - {{ dataInputFilterTitle | translate }}</span>
+			<span class="title">{{'Type' | translate}} - {{ dataInputFilterTitle | translate }}</span>
 		</button>
 
 	<ansyn-tree-view
