fix(filters-panel.component.html): adding tooltip to show favorites filter

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.html
@@ -24,6 +24,8 @@
 			class="favorites"
 			[withArrow]="false"
 			[disabled]="disableOnlyFavoritesButton"
+			[attr.tooltip-value]="'Displays favorites overlays only' | translate"
+			tooltip-class="bottom"
 			(click)="showOnlyFavorites()">
 		<i class="icon"
 		   [ngClass]="onlyFavorite ? 'icon-favorite-full'  : 'icon-favorite-empty'"></i>
