--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.html
@@ -1,20 +1,10 @@
 <div class="data-input-filter">
+	<div class="data-input-header">{{'Type' | translate}}</div>
 	<div class="tree-view-main">
 		<div class="tree-view-container scrolled">
 			<ngx-treeview [config]="dataInputFiltersConfig" [items]="dataInputFiltersItems"
 						  (selectedChange)="selectedFilters = $event">
 			</ngx-treeview>
-		</div>
-		<div class="data-input-filters-buttons">
-			<div>
-				<button>
-					<a (click)="onTreeViewClose()">{{'Cancel' | translate}}</a>
-				</button>
-
-				<button [disabled]="!dataInputFiltersItems.length">
-					<a class="ok-button" (click)="dataInputFiltersOk()">{{'Ok' | translate}}</a>
-				</button>
-			</div>
 		</div>
 	</div>
 </div>
