--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -22,6 +22,12 @@
 		padding: 10px 20px;
 	}
 
+	.data-input-header {
+		font-weight: bold;
+		font-size: 1em;
+		margin: 5px;
+	}
+
 	.tree-view-main {
 		height: 100%;
 		display: flex;
