Aligning the favorite button icon with the text

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/filters-panel/filters-panel.component.less
@@ -34,7 +34,9 @@
 			&.favorites {
 				i.icon {
 					font-size: 20px;
-					line-height: unset;
+					line-height: 0.85;
+					position: relative;
+					top: 1px;
 				}
 			}
 		}
