--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
@@ -8,73 +8,67 @@
 	display: flex;
 	width: 150px;
 
-	button {
-		position: relative;
-		padding: 4px 6px;
-		vertical-align: middle;
-		color: white;
-		line-height: 0;
-
-		&.small-icon-button {
-			font-size: @icon-size;
-			background: transparent;
-			border: none;
-			outline: none;
-			padding: 0;
-			display: flex;
-			align-items: center;
-			z-index: 1;
-			margin-left: 6px;
-
-			&.perspective {
-				margin-left: 11px;
-			}
-
-
-			&:hover:not(:disabled) {
-				background: rgba(0, 0, 0, 0.5);
-			}
-
-			&:disabled {
-				opacity: .6;
-			}
-		}
-
-		i {
-			&.active {
-				color: @application-primary-color;
-			}
-		}
-
-		i.small {
-			font-size: 0.6em;
-		}
-
-		.icon::before {
-			vertical-align: middle;
-			display: block;
-		}
-	}
-
-	div.more-buttons {
-		background: @background-color-3;
-		width: 220px;
-		height: 75px;
-		margin-top: 35px;
-		padding-right: 25px;
-		z-index: 0;
-		text-align: left;
-
-		.button-title {
-			width: 150px;
-		}
-
-		.preset-title {
-			margin-left: 28px;
-		}
+	div.overlay-status-button {
+		display: flex;
 
 		button {
-			font-size: 13px;
+			padding: 4px 6px;
+			color: white;
+			line-height: 0;
+
+			&.small-icon-button {
+				font-size: @icon-size;
+				background: transparent;
+				border: none;
+				outline: none;
+				padding: 0;
+				display: flex;
+				align-items: center;
+				z-index: 1;
+				margin-left: 6px;
+
+				&.perspective {
+					margin-left: 11px;
+				}
+
+
+				&:hover:not(:disabled) {
+					background: rgba(0, 0, 0, 0.5);
+				}
+
+				&:disabled {
+					opacity: .6;
+				}
+			}
+
+			i {
+				&.active {
+					color: @application-primary-color;
+				}
+			}
+
+			i.small {
+				font-size: 0.6em;
+			}
+
+			.icon::before {
+				vertical-align: middle;
+				display: block;
+			}
+		}
+
+		div.more-buttons {
+			position: absolute;
+			background: @background-color-3;
+			top: @imagery-status-height;;
+			width: 220px;
+			padding: 10px 2px;
+			z-index: 0;
+			text-align: left;
+
+			button {
+				font-size: 13px;
+			}
 		}
 	}
 }
