--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -36,28 +36,28 @@
 </button>
 
 <div class="more-buttons" *ngIf="moreButtons">
-	<button class="small-icon-button set-preset"
+	<div class="button small-icon-button set-preset"
 			(click)="togglePreset()"
-			[disabled]="noGeoRegistration">
+			[class.disabled]="noGeoRegistration">
 		<i class="icon icon-quick-loop-add" [class.active]="isPreset"></i>
-		<div class="button-title preset-title">
+		<div class="button-title">
 			{{presetsButtonText | translate}}
 		</div>
-	</button>
+	</div>
 
-	<button class="small-icon-button remove-overlay"
+	<div class="button small-icon-button remove-overlay"
 			(click)="removeOverlay()">
 		<i class="icon" [ngClass]="isRemoved ? 'icon-restore-overlay' : 'icon-remove-overlay'"></i>
 		<div class="button-title">
 			{{isRemoved ? ('Restore overlay' | translate) : ('Remove overlay' | translate)}}
 		</div>
-	</button>
-	<button class="small-icon-button set-favorite"
+	</div>
+	<div class="button small-icon-button set-favorite"
 			(click)="toggleFavorite()">
 		<i class="icon" [ngClass]="!isFavorite? 'icon-favorite-empty' : 'icon-favorite-full'"
 		   [class.active]="isFavorite"></i>
 		<div class="button-title">
 			{{favoritesButtonText | translate}}
 		</div>
-	</button>
+	</div>
 </div>
