Tooltip triggers: Adding an assignment to "active" class (the tooltip will disappear when it is active)

--- a/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/forms/combo-box/combo-box.component.html
@@ -1,6 +1,8 @@
 <div class="combo-container" [ngClass]="[direction, color]"
 	 [attr.tooltip-value]="comboBoxToolTipDescription || null"
-	 [attr.tooltip-class]="direction">
+	 [attr.tooltip-class]="direction"
+	 [class.active]="optionsVisible"
+>
 	<button ansynComboBoxTrigger
 			[ngClass]="buttonClass"
 			type="button"
