(fix): results-table-component.less: fixing the style of the table rows

--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -89,11 +89,9 @@
 
 			div.results-table-body-row:hover + div.results-table-body-row div.cases-table-body-row-data hr  {
 				top: -2px;
-				background-color: red;
 			}
 
 			div.results-table-body-row-data.selected + div.results-table-body-row div.cases-table-body-row-data hr {
-				background-color: red;
 				top: -2px;
 			}
 
@@ -103,7 +101,7 @@
 
 			div.results-table-body-row {
 				display: block;
-				padding: 0px 0px 0px 16px;
+				margin: 0px 0px 0px 16px;
 				transition: background .3s, color .3s;
 				overflow: hidden;
 				height: 57px;
@@ -123,11 +121,13 @@
 				}
 
 				&.active {
+					pointer-events:none;
 					background: #9deeff;
 					color: #156879;
 				}
 
 				&.selected {
+					pointer-events:none;
 					color: #156879;
 					background: #EBF8FA;
 				}
