--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -25,13 +25,18 @@
 			margin-left: 23px;
 			margin-bottom: 15px;
 
+			div.header-title {
+				font-size: 24px;
+			}
+
 			div.box {
 				position: absolute;
 				margin-left: 290px;
 				flex: 1;
 
 				.overlay-count {
-					font-size: 20px;
+					font-size: 17px;
+					margin-top: 3px;
 					position: absolute;
 				}
 			}
