--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -9,7 +9,6 @@
 		 "autoSave": false,
 		 "state": {
 		   "timeFilter": "Start - End",
-		   "orientation": "User Perspective",
 		   "maps": {
 			 "layout": "layout1",
 			 "data": [
@@ -66,6 +65,7 @@
 				   },
 				   "isAutoImageProcessingActive": false
 				 },
+				 "orientation": "Imagery Perspective",
 				 "flags": {},
 				 "worldView": {
 				   "mapType": "openLayersMap",
@@ -104,15 +104,7 @@
 			 ]
 		   },
 		   "contextEntities": null,
-		   "overlaysManualProcessArgs": {
-			 "20190412_213505_ssc11d2_0011": {
-			   "Sharpness": 0,
-			   "Contrast": 0,
-			   "Brightness": 0,
-			   "Gamma": 100,
-			   "Saturation": 100
-			 }
-		   }
+		   "overlaysManualProcessArgs": {  }
 		 }
 	   },
     "casesQueryParamsKeys": [
@@ -1473,7 +1465,7 @@
       "callbackURL": "{{ getv "/ansyn/auth0/callbackURL" "http://localhost:4200/#/callback/" }}",
       "scope": "{{ getv "/ansyn/auth0/scope" "openid" }}"
   },
-  "ORIENTATIONS": ["Align North", "User Perspective", "Imagery Perspective"],
+  "ORIENTATIONS": ["User Perspective", "Imagery Perspective"],
   "algorithmsConfig": {
     "schema": "tasks",
     "paginationLimit": 16,
