set criteria on check/uncheck datainputs (#3111)
* set criteria on check/uncheck datainputs

* fix test

* add hover

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -9,17 +9,32 @@
 
 	/deep/ .treeview-container {
 		overflow-y: hidden !important;
+		padding-right: 0 !important;
 	}
 
-	/deep/ .treeview-container .row-item {
+	/deep/ .treeview-container .row-item, /deep/ div.form-check-inline {
 		display: flex;
 		color: ghostwhite;
+		padding: 5px 20px;
+
+		.form-check-label {
+			cursor: pointer !important;
+		}
+
+		&:hover {
+			background-color: @background-color-4;
+		}
 	}
 
 	.data-input-filter {
 		background: @background-color-0;
 		background-clip: padding-box;
-		padding: 10px 20px;
+	}
+
+	.data-input-header {
+		font-weight: bold;
+		font-size: 1em;
+		padding: 10px 25px;
 	}
 
 	.tree-view-main {
@@ -32,51 +47,5 @@
 	.tree-view-container {
 		max-height: 300px;
 		overflow-y: auto;
-	}
-
-	div.data-input-filters-buttons {
-		button {
-			background: transparent;
-			border: none;
-			color: @application-primary-color;
-
-			&:disabled {
-				cursor: default;
-				pointer-events: none;
-				opacity: .6;
-			}
-		}
-
-		margin-top: 10px;
-		display: flex;
-		justify-content: space-between;
-		color: @application-primary-color;
-
-		div {
-			button {
-				cursor: pointer;
-
-				&:hover:not(:disabled) {
-					font-weight: bold;
-				}
-
-				&:first-child {
-					width: 42px;
-				}
-
-				&:last-child {
-					width: 17px;
-					margin: 0 9px;
-				}
-			}
-		}
-
-		.error {
-			color: crimson;
-		}
-	}
-
-	.ok-button {
-
 	}
 }
