--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
@@ -7,78 +7,81 @@
 	display: flex;
 	width: 150px;
 
-	button {
-		position: relative;
-		padding: 4px 6px;
-		vertical-align: middle;
-		color: white;
-		line-height: 0;
+	div.overlay-status-button {
+		display: flex;
 
-		&.small-icon-button {
-			font-size: @icon-size;
-			background: transparent;
-			border: none;
-			outline: none;
-			padding: 0;
-			display: flex;
-			align-items: center;
-			z-index: 1;
-			margin-left: 6px;
+		button {
+			padding: 4px 6px;
+			color: white;
+			line-height: 0;
 
-			&.perspective {
-				margin-left: 11px;
+			&.small-icon-button {
+				font-size: @icon-size;
+				background: transparent;
+				border: none;
+				outline: none;
+				padding: 0;
+				display: flex;
+				align-items: center;
+				z-index: 1;
+				margin-left: 6px;
+
+				&.perspective {
+					margin-left: 11px;
+				}
+
+
+				&:hover:not(:disabled) {
+					background: rgba(0, 0, 0, 0.5);
+				}
+
+				&:disabled {
+					opacity: .6;
+				}
 			}
 
-			&:hover:not(:disabled) {
-				background: rgba(0, 0, 0, 0.5);
+			i {
+				&.active {
+					color: @application-primary-color;
+				}
 			}
 
-			&:disabled {
-				opacity: .6;
+			i.small {
+				font-size: 0.6em;
+			}
+
+			.icon::before {
+				vertical-align: middle;
+				display: block;
 			}
 		}
 
-		i {
-			&.active {
-				color: @application-primary-color;
-			}
-		}
+		div.more-buttons {
+			background: @background-color-3;
+			height: 75px;
+			margin-top: 35px;
+			z-index: 0;
+			text-align: left;
+			white-space: nowrap;
 
-		i.small {
-			font-size: 0.6em;
-		}
-
-		.icon::before {
-			vertical-align: middle;
-			display: block;
-		}
-	}
-
-	div.more-buttons {
-		background: @background-color-3;
-		height: 75px;
-		margin-top: 35px;
-		z-index: 0;
-		text-align: left;
-		white-space: nowrap;
-
-		.button-title {
-			margin-left: 10px;
-		}
-
-		.button {
-			font-size: 13px;
-			padding-right: 10px;
-			display: flex;
-			cursor: pointer;
-
-			&:hover:not(:disabled) {
-				background: rgba(0, 0, 0, 0.5);
+			.button-title {
+				margin-left: 10px;
 			}
 
-			&.disabled {
-				opacity: .6;
-				pointer-events: none;
+			.button {
+				font-size: 13px;
+				padding-right: 10px;
+				display: flex;
+				cursor: pointer;
+
+				&:hover:not(:disabled) {
+					background: rgba(0, 0, 0, 0.5);
+				}
+
+				&.disabled {
+					opacity: .6;
+					pointer-events: none;
+				}
 			}
 		}
 	}
