--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -68,6 +68,10 @@
 						i.icon-arrow {
 							margin-top: -2px;
 							position: absolute;
+
+							&.active {
+								color: @application-primary-color;
+							}
 						}
 					}
 
