--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker/time-picker.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker/time-picker.component.less
@@ -7,7 +7,7 @@
 
 	input.time-picker-input {
 		position: absolute;
-		top: 0;
+		top: -53px;
 		padding-left: 28px;
 		width: 100%;
 		height: 100%;
