--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.less
@@ -1,3 +1,5 @@
+@import "ansyn/less/colors";
+
 :host {
 	div.presets {
 		background-color: black;
@@ -5,19 +7,19 @@
 		position: absolute;
 		top: 51px;
 		min-width: 150px;
-		min-height: 100px;
+		min-height: 110px;
 
 		button {
 			background-color: black;
 			color: white;
 			border-style: none;
 			width: 100%;
-			font-size: 17px;
+			font-size: 14px;
 			margin-top: 7px;
 			cursor: pointer;
 
 			&:hover {
-				color: #0091ff;
+				background-color: @background-color-7;
 			}
 		}
 	}
