--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker/time-picker.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker/time-picker.component.html
@@ -6,4 +6,4 @@
 	   (dateTimeChange)="onTimeRangeChange($event)"
 	   class="time-picker-input">
 <owl-date-time #dt [backdropClass]="'time-picker-backdrop-undo'"
-(afterPickerClosed)="closeTimePicker.emit()"></owl-date-time>
+(afterPickerClosed)="afterClosed()"></owl-date-time>
