--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.less
@@ -15,7 +15,7 @@
 			border-style: none;
 			width: 100%;
 			font-size: 14px;
-			margin-top: 7px;
+			padding-top: 9px;
 			cursor: pointer;
 
 			&:hover {
