Overlay status button: "bottom right" to "bottom"

--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -3,12 +3,12 @@
 		(click)="toggleDragged()"
 		[disabled]="!isLayersVisible || noGeoRegistration"
 		[attr.tooltip-value]="this.draggedButtonText | translate"
-		tooltip-class="bottom right">
+		tooltip-class="bottom">
 	<i class="icon-drag-annotations" [class.active]="isDragged"></i>
 </button>
 </div>
 <div class="overlay-status-button">
-<button tooltip-class="bottom right"
+<button tooltip-class="bottom"
 		*ngIf="overlay"
 		class="small-icon-button auto-image-processing"
 		[attr.tooltip-value]="'Automatic Processing' | translate"
@@ -18,7 +18,7 @@
 </button>
 </div>
 <div class="overlay-status-button">
-<button tooltip-class="bottom right"
+<button tooltip-class="bottom"
 		*ngIf="overlay"
 		class="small-icon-button"
 		[attr.tooltip-value]="'Manual Image Enhancement' | translate"
@@ -35,7 +35,7 @@
 	<button class="small-icon-button more-btn" *ngIf="overlay"
 			(click)="toggleMoreButtons()"
 			[attr.tooltip-value]="'More buttons' | translate"
-			tooltip-class="bottom right">
+			tooltip-class="bottom">
 		<i class="icon icon-more" [class.active]="moreButtons"></i>
 	</button>
 
