--- a/src/app/@ansyn/ansyn/modules/filters/components/enum-filter-container/enum-filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/filters/components/enum-filter-container/enum-filter-container.component.html
@@ -25,3 +25,5 @@
 	</ansyn-filter-counter>
 
 </div>
+
+<span *ngIf="!metadata.hasResults()" class="field-name enum-fields-enumerator">{{'No Results' | translate }}</span>
