--- a/src/app/@ansyn/ansyn/modules/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/filters/components/filter-container/filter-container.component.html
@@ -11,7 +11,7 @@
 		</div>
 
 		<div class="filter-title-buttons">
-			<div *ngIf="!showOnlyFavorite" class="show-all">
+			<div *ngIf="!showOnlyFavorite && (metadataFromState && metadataFromState.hasResults())" class="show-all">
 				<span (click)="showAll()">{{'Show all' | translate}}</span>
 			</div>
 		</div>
