fixing only favorites overlay from showing

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -24,7 +24,7 @@
 <div class="box"
 	 [attr.tooltip-value]="statusBarConfig?.toolTips?.timeFilterEdit | translate"
 	 tooltip-class="bottom"
-	 [class.active]="timePickerExpand"
+	 [class.active]="timePickerExprand"
 >
 	<button ansynComboBoxTrigger
 			#timePickerTrigger
