--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.html
@@ -1,12 +1,11 @@
 
 <!-- Geo filter -->
-<div class="box" id="geoPreSearch"
-	 [attr.tooltip-value]="statusBarConfig?.toolTips?.geoFilter | translate"
-	 tooltip-class="bottom"
-	 [class.active]="locationPickerExpand"
->
+<div class="box" id="geoPreSearch">
 	<button ansynComboBoxTrigger
 			(click)="toggleLocationPicker()"
+			[attr.tooltip-value]="statusBarConfig?.toolTips?.geoFilter | translate"
+			tooltip-class="bottom"
+			[class.active]="locationPickerExpand"
 			[isActive]="locationPickerExpand"
 			[withArrow]="false"
 			icon="icon icon-status-bar-geo"
@@ -21,14 +20,13 @@
 </div>
 
 <!-- Time -->
-<div class="box"
-	 [attr.tooltip-value]="statusBarConfig?.toolTips?.timeFilterEdit | translate"
-	 tooltip-class="bottom"
-	 [class.active]="timePickerExpand"
->
+<div class="box">
 	<button ansynComboBoxTrigger
 			#timePickerTrigger
 			(click)="toggleTimePicker()"
+			[attr.tooltip-value]="statusBarConfig?.toolTips?.timeFilterEdit | translate"
+			tooltip-class="bottom"
+			[class.active]="timePickerExpand"
 			[isActive]="timePickerExpand"
 			[withArrow]="false"
 			icon="icon icon-status-bar-time"
@@ -46,15 +44,14 @@
 </div>
 
 	<!-- data input filter-->
-	<div class="box" id="dataInputsPreSearch"
-		 [attr.tooltip-value]="statusBarConfig?.toolTips?.dataInputFilter | translate"
-		 tooltip-class="bottom"
-		 [class.active]="dataInputFilterExpand"
-	>
+	<div class="box" id="dataInputsPreSearch">
 		<button ansynComboBoxTrigger
 				#trigger
 				(click)="toggleDataInputFilter()"
 				icon="icon icon-input-filter small"
+				[attr.tooltip-value]="statusBarConfig?.toolTips?.dataInputFilter | translate"
+				tooltip-class="bottom"
+				[class.active]="dataInputFilterExpand"
 				[isActive]="dataInputFilterExpand"
 				[withArrow]="false"
 				class="button">
