hotfix missing div

--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.html
@@ -38,7 +38,7 @@
 			tooltip-class="bottom right">
 		<i class="icon icon-more" [class.active]="moreButtons"></i>
 	</button>
-
+</div>
 <div class="more-buttons" *ngIf="moreButtons">
 	<div class="button small-icon-button set-preset"
 			(click)="togglePreset()"
